xfsprogs-2.6.20 (28 July 2004)
	- Fix a segfault on xfs_io open error path for non-XFS
	  files.  Thanks to Steinar H. Gunderson for this fix.

xfsprogs-2.6.19 (16 July 2004)
	- Fix two byte count size wraps in xfs_copy.
	- Minor man page fixes from Eric Raymond.

xfsprogs-2.6.18 (23 June 2004)
	- Fix libhandle from possibly returning an invalid
	  handle length on systems where size_t is 64 bits.
	- Minor autoconf fixups to get rpm test working on
	  all platforms again.
	- Minor man page updates fixing minus/hyphen usage.

xfsprogs-2.6.17 (23 June 2004)
	- Fix use of isset macro, getting realtime devices to
	  function correctly in xfs_db and xfs_repair.
	- Fix initialisation of realtime devices in libxfs.

xfsprogs-2.6.16 (17 June 2004)
	- Add sendfile command into xfs_io(8) to exercise that
	  functionality.
	- Remove maxtrres program that was used in the build
	  to generate a header for mkfs' consumption.
	- This allows cross-compiles to be greatly simplified.
	- Portability tweaks for building on other platforms.
	- Fix obscure bug in log size lower boundary checks for
	  auto-sized logs when stripe alignment is in effect;
	  the enforced lower bound could have been set too low.

xfsprogs-2.6.15 (09 June 2004)
	- Make xfs_check test for a dirty log before proceeding to
	  check the filesystem.
	- Fix couple of minor bugs in xfs_io (readonly handling on
	  writes, off-by-one error in open file error reporting).

xfsprogs-2.6.14 (13 May 2004)
	- Allow logprint to copy a log to a file (-C) and to dump
	  a log from beginning to end showing ondisk log record (-d).
	- Fix logprint handling of -f option - shouldn't be doing
	  the UUID check in that case, since we don't have the SB.
	- Remove MD device superblock "clean" check, following Neil
	  Brown's advice.
	- Small Debian packaging tweak to say xfsprogs has an fsck.

xfsprogs-2.6.13 (03 May 2004)
	- Zero out more at beginning and end of device at mkfs time